cabal-version:      2.4
name:               hello-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Haisheng
maintainer:         haisheng@example.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hello-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
       HelloAeson
       HelloCryp
       HelloDataKinds
       HelloEither
       HelloEnum
       HelloMaybeT
       HelloDataKindsAssoc
       HelloStringVariants
       HelloTime
       HelloScientific
       HelloTypeFamily
       HelloTempFile
       HelloFactors
       HelloCallStack

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    QuickCheck >= 2.14.2
                    , base >=4.16.1.0
                    , containers
                    , bytestring
                    , mtl
                    , aeson
                    , time
                    , text
                    , transformers
                    , string-variants
                    , pretty-simple
                    , scientific
                    -- , base64-bytestring
                    , base64
                    , memory
                    , hedgehog ^>= 1.2
                    , cryptonite ^>= 0.30
                    , ghc-prim ^>= 0.9
                    , unliftio ^>= 0.2.24
                    , text-icu

    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
      -Wall
      -Wtabs
      -Wunused-packages
      -Wpartial-fields
      -Wwarnings-deprecations
